--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "bin": "./bin/cli.js",
   "scripts": {
     "start": "node src/server",
-    "dev": "nodemon src/server"
+    "dev": "nodemon src/server",
+    "reset:migrate": "node ./src/tests/testMigrate.js",
+    "test": "jest --detectOpenHandles ",
+    "pretest": "npm run reset:migrate"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +20,7 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "helmet": "7.0.0",
+    "jsonwebtoken": "^9.0.1",
     "pg": "8.11.1",
     "pg-hstore": "2.3.4",
     "sequelize": "6.32.1"
